--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
     </header>
     <main>
+      <!-- main container -->
       <div class="flex-container">
         <div class="main">
           <div class="flex-item">
@@ -23,5 +24,20 @@
           </div>
         </div>
       </div>
+    </main>
+    <!-- navigation bar -->
+    <navigation>
+      <nav>
+        <div class="flex-container">
+          <div class="flex-navigation">
+            <h4>Menu</h4>
+            <h4>Apparel</h4>
+            <h4>Gadgets</h4>
+            <h4>Vehicles</h4>
+            <h4>Classes</h4>
+            <h4>Contact</h4>
+          </div>
+        </div>
+    </nav>
   </body>
 </html>
