changes to universal selector

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <header>
         <div class="flex-container">
-          <img src="./resources/logo.png" alt="binaculars"/>
-          <span>SECRET AGENT SUPPLY INC.</span>
+          <div class="nav">
+            <img src="./resources/logo.png" alt="binaculars"/>
+            <span>SECRET AGENT SUPPLY INC.</span>
+          </nav>
         </div>
     </header>
     <main>
-      <!-- main container -->
+      <!-- first container -->
       <div class="flex-container">
         <div class="main">
           <div class="flex-item">
@@ -39,5 +41,11 @@
           </div>
         </div>
     </nav>
+    <!-- second container -->
+    <section>
+      <div class="flex-container">
+
+      </div>
+    </section>
   </body>
 </html>
