flex boxes with images

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc.</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
       <div class="flex-container">
         <div class="main">
           <div class="flex-item">
-            <h4>New arrival</h4>
+            <h1>New arrival</h1>
             <br>
             <h1>SPORT BIKES AND MOTORCYCLES</h1>
           </div>
@@ -32,19 +32,27 @@
       <nav>
         <div class="flex-container">
           <div class="flex-navigation">
-            <h4>Menu</h4>
-            <h4>Apparel</h4>
-            <h4>Gadgets</h4>
-            <h4>Vehicles</h4>
-            <h4>Classes</h4>
-            <h4>Contact</h4>
+            <h1>Menu</h1>
+            <h1>Apparel</h1>
+            <h1>Gadgets</h1>
+            <h1>Vehicles</h1>
+            <h1>Classes</h1>
+            <h1>Contact</h1>
           </div>
         </div>
     </nav>
     <!-- second container -->
     <section>
       <div class="flex-container">
-
+        <div class="flex-boxes">
+          <img src="./resources/pen.png" alt="pen"/>
+        </div>
+        <div class="flex-boxes">
+          <img src="./resources/watch.png" alt="watch"/>
+        </div>
+        <div class="flex-boxes">
+          <img src="./resources/glasses.png" alt="glasses"/>
+        </div>
       </div>
     </section>
   </body>
